# SUNDAY

./: .gitignore  CLAUDE.md  EVVA.md  MEMORY.md  README.md  RUNBOOK.md  evva-swarm.yml
.claude/skills/evva-swarm-guide/: SKILL.md
.evva/: permissions.json  settings.json
agents/main/friday/: profile.yml  system_prompt.md
agents/skills/prd-ticket/: SKILL.md
agents/sub/analyst-flow/: profile.yml  system_prompt.md
agents/sub/analyst-news/: profile.yml  (+1 more)
docs/: workflow.md
docs/prd/: PRD-002-alert-webhook-recipient-routing.md  PRD-003-tp-sl-not-persisting.md  PRD-003-worker-trade-permission-enforcement.md  PRD-004-pnl-webhook-threshold-bug.md  PRD-005-1h-indicators-timeout.md  PRD-006-sunday-mcp-server.md  user-dashboard-prd.md
engine/: .env.example  README.md  pyproject.toml  sunday.db-shm  sunday.db-wal
engine/migrations/: 0001_init.sql  0002_attribution_indexes.sql  0002_dashboard.sql  0004_info_layer.sql  0005_theses.sql  0006_shadow.sql
engine/sunday/: __main__.py  ablation.py  adapters_live.py  adapters_sim.py  advisor.py  alerts.py  algoorders.py  apiutil.py  app.py  attribution.py  backtest.py  config.py  dashboard.html  desk.py  engine.py  events.py  exchange.py  execution.py  feeds.py  indicators.py  indices.py  manual.md  market.py  monitor.py  pagination.py  ports.py  pricehub.py  protection.py  regime.py  risk.py  runtime.py  store.py  strategy.py  telegram.py  views.py
engine/sunday/routers/: __init__.py  account.py  admin.py  alerts.py  funding.py  indices.py  journal.py  klines.py  markets.py  memory.py  monitor.py  perp.py  reports.py
engine/sunday/web/: .gitignore  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
engine/sunday/web/js/: api.js  app.js  charts.js  components.js  format.js  router.js  store.js  vue.js
engine/sunday/web/js/views/: ablation.js  desk.js  manual.js  overview.js  reports.js  risk.js  strategy.js
engine/sunday/web/src/: App.vue  router.ts  style.css
engine/sunday/web/src/api/: client.ts
engine/sunday/web/src/components/: Pager.vue
engine/sunday/web/src/lib/: format.ts  md.ts  toast.ts
engine/sunday/web/src/views/: AccountView.vue  AlertsView.vue  ChartView.vue  IndicesView.vue  JournalView.vue  ManualView.vue  MarketsView.vue  MemoryView.vue  ReportsView.vue  TradeView.vue
engine/sunday_mcp/: __init__.py  __main__.py  client.py  errors.py  server.py  shaping.py  validate.py
engine/tests/: test_ablation.py  test_advisor.py  test_alerts.py  test_algoorders.py  test_attribution.py  test_audit_log.py  test_backtest.py  test_desk.py  test_engine.py  test_events.py  test_exchange.py  test_execution.py  test_indicators.py  test_indices.py  test_mcp_client.py  test_mcp_errors.py  test_mcp_shaping.py  test_mcp_validate.py  test_monitor.py  test_monitor_refresh.py  test_pagination.py  test_protection.py  test_regime.py  test_risk.py  test_store.py  test_strategy.py  test_telegram.py  test_tpsl_safety.py  test_tpsl_visibility.py  test_views.py  test_webhook_delivery.py
scripts/: run-tests.sh  smoke-mcp.sh  smoke-webhook.sh  smoke.sh
(+81 files in other folders)
