[project]
name = "sunday-engine"
version = "0.1.0"
description = "Sunday — Binance USDⓈ-M perps trading engine, supervised by an evva swarm"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "redis>=5.0",
    "ccxt>=4.3",
]
# The pure decision core (indicators / strategy / risk / regime / advisor /
# execution / events) is stdlib-only — no pandas/numpy, and the webhook uses urllib
# (no httpx) — so every decision is unit-testable anywhere via `python -m unittest`.
# The live exchange adapter uses ccxt (USDⓈ-M testnet). The heavy quant/ML stack
# (pandas/numpy + the backtest data tooling) lands as a Gate-2 *modeling* extra.
[project.optional-dependencies]
modeling = ["pandas>=2.2", "numpy>=1.26"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sunday*"]
