[project]
name = "sunday-engine"
version = "0.1.0"
description = "Sunday — an agent-native Binance USDⓈ-M proxy service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "ccxt>=4.5.57",   # ≥4.5: routes USDⓈ-M conditional orders via Binance's Algo Service
                      # (post 2025-12-09 the legacy order endpoint rejects them with -4120)
    "websockets>=12.0",
    "certifi>=2024.2.2",          # CA bundle for the indices HTTPS feeds (urllib)
]
# No Postgres/Redis: the only durable state is the alerts table in a single sqlite
# file (stdlib sqlite3). ccxt drives both the mainnet market-data instance and the
# testnet trade instance; websockets powers the realtime price hub (monitor/alerts).
# The pure logic (indicators / pagination / alerts / indices parsers / events) is
# stdlib-only, so it stays unit-testable anywhere via `python -m unittest`.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sunday*"]
